GNOME Bugzilla – Bug 699236
Assert triggered during gdk_pixmap_new() if some failure happens
Last modified: 2013-08-14 08:41:54 UTC
If for some reason gdk_pixmap_new() fails (e.g. CreateDIBSection() fails), we end up g_object_unref()-ing the temporary GdkPixmap we created and this triggers an assert in GdkDrawable's finalize: Gdk:ERROR:gdkdrawable-win32.c:2047:_gdk_win32_drawable_finish: assertion failed: (impl->hdc_count == 0) Easily reproducible, just by doing: /* Invalid sizes for pixmap, and depth=16 to * trigger CreateDIBSection() */ pixmap = gdk_pixmap_new (NULL, -1, -1, 16);
Created attachment 242821 [details] [review] Patch.
Review of attachment 242821 [details] [review]: looks reasonable
Pushed to gtk-2-24.